# image-translator

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  template.env
.dvc/: config
assets/: .gitignore  images.dvc  results.dvc
assets/checkpoints/: .gitignore  decoder_conv1.dvc  decoder_conv2.dvc  decoder_conv3.dvc  decoder_fc1.dvc  encoder_conv1.dvc  encoder_conv2.dvc  encoder_conv3.dvc  encoder_fc1.dvc
assets/config/: .gitignore  decoder_config.yaml.dvc  encoder_config.yaml.dvc  training_config.yaml.dvc
services/: Dockerfile
src/image_translator/data/: datasets.py
src/image_translator/networks/: networks.py
src/image_translator/scripts/: fetch_data.py  train.py
src/image_translator/trainers/: trainer.py
src/image_translator/utils/: constants.py  utils.py
tests/networks/: test_networks.py
