[tool.poetry]
name = "image-translator"
version = "0.1.0"
description = ""
authors = ["Giulia Caglia <cagliagiulia42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.6.12"
click = "^8.1.7"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.7.0"
ipython = "^8.24.0"

[tool.poetry.scripts]
fetch-data = "image_translator.scripts.fetch_data:fetch_data"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
